--- a/source_js/source/ts/main.pug
+++ b/source_js/source/ts/main.pug
@@ -1,5 +1,5 @@
 div
     include header/header
     md-content(layout="row" layout-align="center start")
-        .container(layout="column" flex)
+        .container(layout="column")
             ui-view
