Added user roles

--- a/source_js/source/scss/common.scss
+++ b/source_js/source/scss/common.scss
@@ -1,4 +1,16 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 .container {
   width: 100%;
   max-width: 1200px;
+}
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
 }
