--- a/source_js/source/ts/header/header.pug
+++ b/source_js/source/ts/header/header.pug
@@ -1,1 +1,5 @@
-md-toolbar
+md-toolbar(ng-controller="NavigationCtrl as ctrl" layout="row" layout-align="center start")
+    .container.navigaion
+        .pull-right
+            a.navigation-button(ng-if="ctrl.configuration.user.isAdmin()" ui-sref="app.admin.users" ui-sref-active="active") Użytkownicy
+            a.navigation-button(href="/") Wyloguj
