--- a/src/BuilderBundle/Resources/views/Default/index.html.twig
+++ b/src/BuilderBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Builder</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('dist/css/main.min.css') }}">
     <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
@@ -10,8 +11,9 @@
     <script src="{{ asset('dist/js/app.min.js') }}"></script>
     <script>
         angular.module('app')
-                .config(['RoutingProvider', function (routingProvider) {
+                .config(['RoutingProvider', 'ConfigurationProvider', function (routingProvider, configurationProvider) {
                     routingProvider.setRouting(Routing);
+                    configurationProvider.setUserRole('ROLE_ADMIN');
                 }]);
     </script>
 </head>
