--- a/source_js/source/ts/users/addUser.modal.pug
+++ b/source_js/source/ts/users/addUser.modal.pug
@@ -29,4 +29,4 @@ md-dialog.add-user-modal
                         md-option(value="1") Administrator
     md-dialog-actions
         md-button(ng-click="modalCtrl.close()") Anuluj
-        md-button(ng-click="modalCtrl.addUser()" ng-disabled="!addUserForm.$valid") Dodaj
+        md-button.md-raised.md-primary(ng-click="modalCtrl.addUser()" ng-disabled="!addUserForm.$valid") Dodaj
