--- a/src/BuilderBundle/Resources/views/Default/index.html.twig
+++ b/src/BuilderBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
                     configurationProvider.setUserRole('ROLE_ADMIN');
                 }])
                 .run(['ChangePasswordService', function(changePasswordService) {
-                    if(true) {
+                    if(false) {
                         changePasswordService.showModal();
                     }
                 }]);
