Admin can add new project

--- a/source_js/source/ts/header/header.pug
+++ b/source_js/source/ts/header/header.pug
@@ -2,6 +2,10 @@ md-toolbar(ng-controller="NavigationCtrl as ctrl" layout="row" layout-align="cen
     .container.navigaion
         .pull-left
             a.navigation-button(ng-repeat="project in ctrl.projectsService.projects") {{ project.name }}
+            div.add-new-project-button(ng-if="ctrl.configuration.user.isAdmin()")
+                md-tooltip(ng-if="ctrl.projectsService.projects.length >= 4") Możesz posiadać maksymalnie 4 projekty
+                md-button.md-icon-button(ng-click="ctrl.newProject()" ng-disabled="ctrl.projectsService.projects.length >= 4")
+                    i.material-icons add_circle_outline
         .pull-right
             a.navigation-button(ng-if="ctrl.configuration.user.isAdmin()" ui-sref="app.admin.users" ui-sref-active="active") Użytkownicy
             a.navigation-button(href="/") Wyloguj
