--- a/source_js/source/scss/common.scss
+++ b/source_js/source/scss/common.scss
@@ -7,6 +7,10 @@
   max-width: 1200px;
 }
 
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
+
 .pull-right {
   float: right;
 }
