--- a/source_js/source/scss/header.scss
+++ b/source_js/source/scss/header.scss
@@ -4,6 +4,12 @@
   line-height: 59px;
 
   .navigation-button {
+    border-bottom: 3px solid rgba(0,0,0,0);
+    padding: 0 10px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 16px;
+
     &, &:hover, &:focus, &:visited, &active {
       color: white;
       text-decoration: none;
@@ -14,14 +20,22 @@
       border-bottom: 3px solid $accent500;
     }
 
-    border-bottom: 3px solid rgba(0,0,0,0);
-    padding: 0 20px;
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 16px;
+    .edit-project-button {
+      padding: 0;
+      margin: 0;
+      width: 25px;
+
+      i {
+        font-size: 17px;
+      }
+    }
   }
 
   .add-new-project-button {
     display: inline-block;
+
+    i {
+      font-size: 20px;
+    }
   }
 }
