Add database mock-modal

--- a/source_js/source/ts/projects/create/newProject.pug
+++ b/source_js/source/ts/projects/create/newProject.pug
@@ -1,7 +1,8 @@
-extends  ../mainProjectSettings
-
-block project-title
-    md-card-title-text Ustawienia projektu
-
-block project-actions
-    md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.saveProject()" ng-disabled="!projectForm.$valid") Dodaj
+md-card
+    md-card-title
+        md-card-title-text Nowy projekt
+    md-card-content
+        include ../projectSettings
+    md-dialog-actions
+        .md-dialog-content
+            md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.saveProject()" ng-disabled="!projectForm.$valid") Dodaj
