--- a/source_js/source/ts/projects/edit/editProject.pug
+++ b/source_js/source/ts/projects/edit/editProject.pug
@@ -1,8 +1,15 @@
-extends ../mainProjectSettings
-
-block project-title
-    md-card-title-text Ustawienia projektu
-
-block project-actions
-    md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.saveProject()" ng-disabled="!projectForm.$valid || !projectForm.$dirty") Zapisz
-    md-button.md-raised.md-warn.pull-right(ng-click="projectCtrl.deleteProject($event, projectCtrl.project.id)") Usuń
+md-card
+    md-tabs(md-dynamic-height md-border-bottom)
+        md-tab(label="Konfiguracja")
+            md-card-content
+                include ../projectSettings
+            md-dialog-actions
+                .md-dialog-content
+                    md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.saveProject()" ng-disabled="!projectForm.$valid || !projectForm.$dirty") Zapisz
+                    md-button.md-raised.md-warn.pull-right(ng-click="projectCtrl.deleteProject($event, projectCtrl.project.id)") Usuń
+        md-tab(label="Bazy danych")
+            md-card-content
+                include projectsDatabases
+            md-dialog-actions
+                .md-dialog-content
+                    md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.addDatabase($event)") Dodaj bazę
