--- a/source_js/source/ts/header/header.pug
+++ b/source_js/source/ts/header/header.pug
@@ -1,8 +1,8 @@
-md-toolbar(ng-controller="NavigationCtrl as ctrl" layout="row" layout-align="center start")
-    .container.navigaion
+md-toolbar.main-toolbar(ng-controller="NavigationCtrl as ctrl" layout="row" layout-align="center start")
+    .navigaion
         .pull-left
-            span.navigation-button(ng-repeat="project in ctrl.projectsService.projects")
-                a {{ project.name }}
+            span(ng-repeat="project in ctrl.projectsService.projects")
+                a.navigation-button(ui-sref="app.dashboard({id: {{project.id}}})" ui-sref-active="active") {{ project.name }}
                 md-button.md-icon-button.edit-project-button(ng-if="ctrl.configuration.user.isAdmin()" ng-click="ctrl.editProject(project.id)")
                     i.material-icons edit
             div.add-new-project-button(ng-if="ctrl.configuration.user.isAdmin()")
