--- a/source_js/source/scss/common.scss
+++ b/source_js/source/scss/common.scss
@@ -1,5 +1,6 @@
 * {
   font-family: 'Roboto', sans-serif;
+  color: $background600;
 }
 
 .container {
@@ -33,4 +34,31 @@ input:-webkit-autofill {
 
 .no-bottom-padding {
   padding-bottom: 0 !important;
+}
+
+md-card {
+  md-card-title {
+    md-card-title-text {
+      font-size: 24px;
+      color: $accent500;
+    }
+  }
+}
+
+a {
+  &, &:hover, &:focus, &:active, &:visited {
+    border: inherit;
+    color: inherit;
+    text-decoration: inherit;
+  }
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  li {
+    padding: 5px 10px;
+  }
 }
