--- a/src/BuilderBundle/Resources/views/Default/index.html.twig
+++ b/src/BuilderBundle/Resources/views/Default/index.html.twig
@@ -14,7 +14,7 @@
         angular.module('app')
                 .config(['RoutingProvider', 'ConfigurationProvider', function (routingProvider, configurationProvider) {
                     routingProvider.setRouting(Routing);
-                    configurationProvider.setUserRole({{ USER_ROLE }});
+                    configurationProvider.setUserRole('{{ USER_ROLE }}');
                 }])
                 .run(['ChangePasswordService', function(changePasswordService) {
                     if(false) {
