User can delete the checklist

--- a/source_js/source/scss/checklists.scss
+++ b/source_js/source/scss/checklists.scss
@@ -8,6 +8,15 @@
     &:hover {
       background: $background;
     }
+
+    .delete-checklist {
+      float: right;
+    }
+
+    .list-name {
+      width: calc(100% - 40px);
+      display: inline-block;
+    }
   }
 }
 
