User can add item to his checklist

--- a/source_js/source/scss/checklists.scss
+++ b/source_js/source/scss/checklists.scss
@@ -20,3 +20,27 @@
   }
 }
 
+.checklist-items {
+  margin-bottom: 20px;
+
+  li {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+    &:nth-child(odd) {
+      background: $background;
+    }
+
+    &.solved-item {
+      text-decoration: line-through;
+      font-style: italic;
+    }
+  }
+}
+
+.checklist-details {
+  md-input-container {
+    width: 100%;
+  }
+}
