--- a/source_js/source/ts/dashboard/dashboard.pug
+++ b/source_js/source/ts/dashboard/dashboard.pug
@@ -3,8 +3,9 @@ div
         md-card-title
             md-card-title-text Brak aktywnych projektów. Poproś administratora systemu o skonfigurowanie potrzebnych zasobów.
     .container(ng-if="dashboardCtrl.projectsService.projects.length > 0" layout="row")
-        md-card(flex="70")
-            md-card-title
-                md-card-title-text Instancja...
-        md-card(flex="30")
+        div(flex="70")
+            md-card
+                md-card-title
+                    md-card-title-text Instancja...
+        div(flex="30")
             checklist-list
