User can share checklist

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="row">
-        <div id="login-box" class="col s12 m4">
+        <div id="login-box" class="center-box col s12 m4">
             <div class="card">
                 <div class="card-content white-text blue darken-2">
                     <span class="card-title">Logowanie</span>
