--- a/source_js/source/ts/checklist/checklist.pug
+++ b/source_js/source/ts/checklist/checklist.pug
@@ -1,11 +1,13 @@
 .container(layout="row")
     div(flex="70")
         md-card
-            md-card-title
+            md-card-title(layout="column")
                 md-card-title-text {{ checklistCtrl.checklist.name }}
+                span.little-title Link publiczny:
+                    a(href="{{checklistCtrl.getPublicLink()}}" target="_blank" rel="noopener") {{ checklistCtrl.getPublicLink() }}
             md-card-content.checklist-details
                 ul.grey.checklist-items
-                    li(ng-repeat="item in checklistCtrl.checklist.items" ng-class="item.solved ? 'solved-item' : ''")
+                    li(ng-repeat="item in checklistCtrl.checklist.getSortedItems()" ng-class="item.solved ? 'solved-item' : ''")
                         span.item-name {{ item.name }}
                         md-button.md-icon-button.pull-right(ng-click="checklistCtrl.checklist.removeItem(item)")
                             i.material-icons delete
