--- a/source_js/source/ts/projects/edit/editProject.pug
+++ b/source_js/source/ts/projects/edit/editProject.pug
@@ -9,7 +9,7 @@ md-card
                     md-button.md-raised.md-warn.pull-right(ng-click="projectCtrl.deleteProject($event, projectCtrl.project.id)") Usuń
         md-tab(label="Bazy danych")
             md-card-content
-                include projectsDatabases
+                include databases/projectDatabases
             md-dialog-actions
                 .md-dialog-content
                     md-button.md-raised.md-primary.pull-right(ng-click="projectCtrl.addDatabase($event)") Dodaj bazę
