--- a/src/BuilderBundle/Resources/views/Default/index.html.twig
+++ b/src/BuilderBundle/Resources/views/Default/index.html.twig
@@ -23,7 +23,7 @@
                         configurationProvider.setDatabaseSocket('ws://builder-dev.vagrant:3001/databases');
                     }])
                 .run(['ChangePasswordService', function (changePasswordService) {
-                    if (false) {
+                    if ({{ showModal }}) {
                         changePasswordService.showModal();
                     }
                 }]);
