--- a/source_js/source/ts/projects/edit/databases/projectDatabases.pug
+++ b/source_js/source/ts/projects/edit/databases/projectDatabases.pug
@@ -20,6 +20,6 @@
                     td.center-align.database-status.database-status-error(md-cell ng-show="database.status === 2")
                         span Błąd
                     td.center-align(md-cell)
-                        md-button.md-icon-button(ng-click="")
+                        md-button.md-icon-button(ng-click="projectCtrl.deleteDatabase($event, database.id)")
                             md-tooltip(md-direction="top") Usuń instancję bazy
                             i.material-icons.grey delete
