--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -8,9 +8,6 @@
 </head>
 
 <body>
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
 
 <div class="container">
     <div class="row">
@@ -35,6 +32,11 @@
                                 <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
                             </div>
                         </div>
+                        {% if error %}
+                            <div class="error-box">
+                                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            </div>
+                        {% endif %}
                         <div class="row no-margin-bottom ">
                             <div class="col s12 m12 l12">
                                 <button type="submit" id="_submit" class="right waves-effect waves-light btn blue darken-2">Loguj
