Fixed bug with changePassword modal

--- a/source_js/source/ts/changePassword/changePassword.modal.pug
+++ b/source_js/source/ts/changePassword/changePassword.modal.pug
@@ -8,14 +8,14 @@ md-dialog.change-password-modal
             form(name="changePasswordForm" layout="column" novalidate ng-submit="modalCtrl.changePassword()")
                 md-input-container
                     label Hasło
-                    input(name="password" minlength="8" maxlength="30" required ng-model="modalCtrl.password")
+                    input(name="password" type="password" minlength="8" maxlength="30" required ng-model="modalCtrl.password")
                     div(ng-messages="changePasswordForm.password.$error")
                         div(ng-message="required") To pole jest wymagane
                         div(ng-message="md-maxlength") Hasło nie może być dłuższe niż 30 znaków
                         div(ng-message="minlength") Hasło nie może być krótsze niż 8 znaki
                 md-input-container
                     label Powtórz hasło
-                    input(name="repeatPassword" required match-password="password" ng-model="modalCtrl.repeatedPassword")
+                    input(name="repeatPassword" type="password" required match-password="password" ng-model="modalCtrl.repeatedPassword")
                     div(ng-messages="changePasswordForm.repeatPassword.$error")
                         div(ng-message="required") To pole jest wymagane
                         div(ng-message="passwordMatch") Podane hasła są różne
