--- a/src/BuilderBundle/Resources/views/Default/index.html.twig
+++ b/src/BuilderBundle/Resources/views/Default/index.html.twig
@@ -33,6 +33,9 @@
                             $urlRouter.sync();
                             $state.go('app.project.dashboard');
                         });
+                    } else {
+                        $urlRouter.sync();
+                        $state.go('app.project.dashboard');
                     }
                 }]);
     </script>
