--- a/source_js/source/ts/checklist/checklist.pug
+++ b/source_js/source/ts/checklist/checklist.pug
@@ -17,8 +17,11 @@
                         input(name="newItem" required ng-model="checklistCtrl.newItem")
                         div(ng-messages="newItemForm.newItem.$error")
                             div(ng-message="required") To pole jest wymagane
-                md-card-actions.grey.pull-right(layout="row")
-                    md-button.md-raised.md-warn(ng-click="checklistCtrl.deleteChecklist($event)") Usuń checklistę
-                    md-button.md-raised.md-primary(ng-click="checklistCtrl.saveChecklist()") Zapisz
+                md-card-actions.grey.checklist-actions(layout="row")
+                    .left-actions
+                        md-button.md-raised.md-primary(ng-click="checklistCtrl.showShareChecklistModal($event)") Udostępnij
+                    .right-actions
+                        md-button.md-raised.md-warn(ng-click="checklistCtrl.deleteChecklist($event)") Usuń checklistę
+                        md-button.md-raised.md-primary(ng-click="checklistCtrl.saveChecklist()") Zapisz
     div(flex="30")
         checklist-list
